Fixed the scroll bar hovering not showing up

--- a/global.css
+++ b/global.css
@@ -42,7 +42,7 @@
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    box-shadow: inset 0 0 14px 14px var(--base-color);
+    box-shadow: inset 0 0 14px 14px #c4c4c4;
 }
 
 ::-webkit-scrollbar-button {
